refactor: decouple services from persistence layer with repository abstractions